dist/kong/authRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-orders
  namespace: the-store
  annotations:
    konghq.com/plugins: basic-auth-plugin
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /info
        - path:
            type: PathPrefix
            value: /topology
      backendRefs:
        - name: ui
          namespace: the-store
          kind: Service
          port: 80
